--- a/index.css
+++ b/index.css
@@ -2,7 +2,52 @@
 {
     color: red;
 } */
- #heading 
+ /* #heading 
  {
     color: red;
- }
+ } */
+  .header {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+
+  }
+  .logo {
+    width: 200px;
+  }
+  .nav-items {
+    padding: 0px 20px;
+  }
+  .nav-items > ul {
+    font-size: 24px;
+    display: flex;
+    list-style-type: none;
+  }
+  .nav-items > ul > li {
+    padding: 10px;
+    margin: 10px;
+  }
+  .restro-container {
+    display: flex;
+    flex: wrap;
+  }
+  .restro-card {
+    margin: 5px;
+    padding: 5px;
+    width: 200px;
+    height: 350px;
+  }
+  .restro-card :hover
+  {
+    border: 1px solid black;
+  }
+  .search {
+    padding: 10px;
+  }
+  .restro-card > img {
+    width: 200px;
+    height: 150px;
+  }
+  .filter-btn {
+    margin: 10px;
+  }
