--- a/index.css
+++ b/index.css
@@ -50,4 +50,18 @@
   }
   .filter-btn {
     margin: 10px;
+    cursor: pointer;
   }
+.shimmer-container{
+  display: flex;
+  flex: wrap;
+}
+.shimmer-cards {
+  margin: 10px;
+  width: 200px;
+  height: 150px;
+  background-color: grey;
+}
+.filter {
+  display: flex;
+}
