--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+@import "tailwindcss";
 /* #parent
 {
     color: red;
@@ -6,7 +7,7 @@
  {
     color: red;
  } */
-  .header {
+  /* .header {
     display: flex;
     justify-content: space-between;
     border: 1px solid black;
@@ -68,4 +69,4 @@
 .user-card {
   padding : 10px;
   border: 1x solid 
-}
+} */
